--- a/styles/aside.css
+++ b/styles/aside.css
@@ -1,4 +1,6 @@
 #brand {
+
+  position: relative;
   background-image: url(../assets/image/Background.png);
   background-position: center;
   background-repeat: no-repeat;
@@ -11,6 +13,7 @@
     flex-direction: column;
     padding-inline: 3.2rem;
     padding-top: 3.2rem;
+    
     
     & img {
       width: 4.5rem;
