--- a/styles/forms/input.css
+++ b/styles/forms/input.css
@@ -1,3 +1,14 @@
+input, textarea {
+  &[required] + .error {
+    display: flex;
+    align-items: center;
+    gap: .8rem;
+    color: var(--danger);
+    font: var(--body-xs);
+
+  }
+}
+
 input, select, textarea {
   width: 100%;
   border-radius: .8rem;
@@ -5,6 +16,16 @@ input, select, textarea {
   outline: 1px solid var(--input-stroke);
   border: 2px solid transparent;
   padding: 1.6rem;
+}
+
+input:focus,
+textarea:focus {
+  border: 1px solid var(--brand-light);
+}
+
+input:invalid,
+textarea:invalid {
+  border: 1px solid var(--danger);
 }
 
 .input-wrapper, .text-area {
