--- a/styles/forms/customize.css
+++ b/styles/forms/customize.css
@@ -32,8 +32,7 @@
     & .radio-wrapper {
       display: grid;
       gap: .8rem;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(3, 1fr);
+      grid-template-columns: repeat(4, 1fr);
 
       & .radio-inner {
         position: relative;
@@ -43,8 +42,9 @@
 
         background-color: var(--shape-button);
         border-radius: .8rem;
-
-        padding: .4rem .4rem .4rem .8rem;
+        
+        align-items: center;
+        padding: .4rem .4rem .8rem .4rem;
 
         & input,
         & input:focus,
@@ -57,7 +57,7 @@
         & img {
           width: 100%;
           border-radius: .4rem;
-          object-fit: cover;
+          object-fit: contain;
         }
 
         & label {
