same changes on customize section

--- a/styles/forms/customize.css
+++ b/styles/forms/customize.css
@@ -36,12 +36,13 @@
 
       & .radio-inner {
         position: relative;
-        display: flex;
-        flex-direction: column;
+        display: grid;
         gap: .8rem;
+        justify-items: center;
 
         background-color: var(--shape-button);
         border-radius: .8rem;
+        border: 2px solid transparent;
         
         align-items: center;
         padding: .4rem .4rem .8rem .4rem;
@@ -57,12 +58,21 @@
         & img {
           width: 100%;
           border-radius: .4rem;
-          object-fit: contain;
+          object-fit: cover;
         }
 
         & label {
           text-align: center;
           line-height: auto;
+        }
+
+        &:hover {
+          background-color: var(--shape-hover);
+        }
+
+        &:has(:checked) {
+          border: 2px solid var(--brand-light);
+          border-radius: .8rem;
         }
       }
     }
