--- a/styles/forms/customize.css
+++ b/styles/forms/customize.css
@@ -78,3 +78,81 @@
     }
   }
 }
+
+.switch {
+  padding-block: .8rem;
+  align-items: center;
+  gap: 1.2rem;
+  position: relative;
+  width: 17.6rem;
+
+  & .toggle-label label {
+    font: var(--body-sm-light);
+    transition: color 0.3 ease;
+    position: relative;
+}
+
+  & #switch {
+    position: relative;
+    width: 6.4rem;
+
+    & span {
+      display: block;
+      border: 1px solid var(--input-stroke);
+      border-radius: 99.9rem;
+
+      width: 7rem;
+      height: 4rem;
+
+      background-color: var(--input-base);
+      transition: background-color 0.3s ease;
+      }
+
+      & input {
+        position: absolute;
+        z-index: 1;
+        left: 7%;
+        top: 10%;
+
+        width: 2.4rem;
+        height: 2.4rem;
+
+        background-color: var(--shape-button);
+
+        border-radius: 50%;
+
+        outline: none;
+        border: none;
+
+        &:checked {
+          transform: translateX(95%);
+          background-color: var(--text-heading);
+
+          &:checked + span {
+            background-color: var(--brand-light);
+
+            }
+
+            &:has(:enabled) + p .dark {
+              display: none;
+            }
+          }
+        }
+      }
+    }
+
+    .cover {
+      display: flex;
+      flex-direction: column;
+      & label {
+        margin-bottom: 1.2rem;
+      }
+
+      & input, 
+      input:hover,
+      input:focus {
+        all: unset;
+        inset: 0;
+      }
+    }
+
