--- a/styles/global.css
+++ b/styles/global.css
@@ -32,7 +32,7 @@
   --shape-button: #2d3136;
   --shape-hover: #383d42;
   
-  --text-body: #c8cdd0;
+  --text-body: #C8CDD0;
   --text-heading: #f9f9f9;
 
   --font-leckerly: "Leckerli One";
@@ -70,4 +70,24 @@
 
 .hidden {
   display: none;
+}
+
+fieldset {
+  border: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+  align-self: self-start;
+}
+
+legend {
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
+  margin-bottom: 2.1rem;
+}
+
+h2 {
+  color: var(--text-heading);
+  font: var(--heading-sm);
 }
