--- a/styles/main.css
+++ b/styles/main.css
@@ -2,10 +2,40 @@
   background-color: var(--shape-body);
   padding: 8rem 13rem;
   overflow: scroll;
+  display: grid;
+  gap: 4rem;
+  align-items: center;
 
   & header h1 {
     font: var(--heading-md);
     color: var(--text-heading);
     margin-bottom: 4rem;
+  }
+
+  & form {
+    display: grid;
+    align-items: center;
+    gap: 4.8rem;
+
+    & .generate {
+      margin-left: 44rem;
+      max-width: 18rem;
+      padding: 1.3rem 2rem;
+
+      border: none;
+      border-radius: .8rem;
+      background-color: var(--brand-dark);
+
+      display: flex;
+      align-items: center;
+      gap: 1.2rem;
+
+      color: var(--text-heading);
+      font: 600 1.6rem var(--font-open);
+
+      & img {
+        max-width: 2rem;
+      }
+    }
   }
 }
